--- a/index.html
+++ b/index.html
@@ -242,22 +242,8 @@ th.col-total, td.col-total {
 }
 
 
-/* === Mobile toolbar enhancements (2 columns + special checkbox style) === */
 @media (max-width: 768px) {
-  .toolbar {
-    display: grid !important;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px 12px;
-    align-items: stretch;
-    width: 100%;
-  }
-  .toolbar .pill,
-  .toolbar label.pill {
-    width: 100%;
-    min-width: 0;
-    margin: 0;
-  }
-  /* Special style for "顯示未排期" checkbox */
+  /* 只針對顯示未排期的 pill 做橫向貼齊修正 */
   .toolbar label.pill {
     display: flex !important;
     flex-direction: row !important;
@@ -265,40 +251,28 @@ th.col-total, td.col-total {
     justify-content: flex-start !important;
     font-size: 13px !important;
     gap: 8px !important;
-    padding: 6px 10px !important;
-    height: 38px;
+    width: 100% !important;
+    min-width: 0;
+    margin: 0;
+    padding: 0 14px !important;
+    height: 44px;
+    box-sizing: border-box;
   }
   .toolbar label.pill input[type="checkbox"] {
-    width: 20px;
-    height: 20px;
+    margin-right: 8px;
+    margin-left: 0;
+    width: 22px;
+    height: 22px;
     accent-color: #2563eb;
-    margin-right: 4px;
     flex-shrink: 0;
   }
   .toolbar label.pill span {
-    font-size: 13px !important;
-    line-height: 1.3;
+    flex: 1 1 auto;
+    font-size: 14px !important;
     letter-spacing: 0.01em;
-    padding-top: 1px;
-  }
-  /* 工具按鈕區: 2欄式 */
-  .toolbar .right {
-    grid-column: span 2;
-    display: grid !important;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px 12px;
-    width: 100%;
-    margin-left: 0;
-    justify-content: stretch;
-    flex-direction: unset;
-  }
-  .toolbar .right button {
-    width: 100% !important;
-    min-width: 0 !important;
-    min-height: 44px;
-    font-size: 15px;
-    margin: 0 !important;
-    box-sizing: border-box;
+    white-space: nowrap;
+    padding-left: 2px;
+    display: block;
   }
 }
 </style>
